grist uploader logic modified :     - Uploads FileName_Headers.csv first and then FileName_Items.csv     - After uploading marks moves them in success folder by changing extension to .success     - Error reporint in logs added     - Basic grist error handling

--- a/.env
+++ b/.env
@@ -1,5 +1,8 @@
 GRIST_API_KEY=7a377f3f2d53207dc917c86030503e7cd3311686
 GRIST_DOC_ID=gi1sPNycQAHoMTekxE6QN3
-GRIST_TABLE_ID=InvoiceMaster
-CSV_FILE_PATH=D:\Irshad\Dev\Python\InvoiceDataExtractor\files\output\Apr25Headers.csv
+GRIST_TABLE_ID=InvoiceMaster # Table for _Header.csv files
+GRIST_ITEMS_TABLE_ID=InvoiceItems # <<<--- FILL THIS IN with the Grist Table ID for _Items.csv files
+CSV_DIRECTORY_PATH=D:\Irshad\Dev\Python\InvoiceDataExtractor\files\output
+SUCCESS_FOLDER_NAME=success
+LOG_FILE_NAME=upload_errors.log
 GRIST_SERVER_URL=http://safcost.duckdns.org:8484
