--- a/.env
+++ b/.env
@@ -1,7 +1,18 @@
+# Wrapper settings (secs)
+UPLOAD_INTERVAL=120
+
+#Logging settings
+WRAPPER_LOG_FILE=wrapper.log
+# 5 MB
+WRAPPER_LOG_MAX_BYTES=5242880
+# Keep 10 backups
+WRAPPER_LOG_BACKUP_COUNT=10
+
+# Grist settings
 GRIST_API_KEY=7a377f3f2d53207dc917c86030503e7cd3311686
 GRIST_DOC_ID=gi1sPNycQAHoMTekxE6QN3
-GRIST_TABLE_ID=InvoiceMaster # Table for _Header.csv files
-GRIST_ITEMS_TABLE_ID=InvoiceItems # <<<--- FILL THIS IN with the Grist Table ID for _Items.csv files
+GRIST_TABLE_ID=InvoiceMaster
+GRIST_ITEMS_TABLE_ID=InvoiceItems
 CSV_DIRECTORY_PATH=D:\Irshad\Dev\Python\InvoiceDataExtractor\files\output
 SUCCESS_FOLDER_NAME=success
 LOG_FILE_NAME=upload_errors.log
