logging mechanism in the claude_extractor.py file directory structure location from .env file

--- a/.env
+++ b/.env
@@ -17,3 +17,14 @@ CSV_DIRECTORY_PATH=D:\Irshad\Dev\Python\InvoiceDataExtractor\files\output
 SUCCESS_FOLDER_NAME=success
 LOG_FILE_NAME=upload_errors.log
 GRIST_SERVER_URL=http://safcost.duckdns.org:8484
+
+# Claude Extractor Logging settings
+CLAUDE_LOG_FILE=claude_extractor.log
+CLAUDE_LOG_MAX_BYTES=5242880
+CLAUDE_LOG_BACKUP_COUNT=10
+
+# Claude Extractor Directory Paths
+INPUT_DIR=files/input
+OUTPUT_DIR=files/output
+ARCHIVE_DIR=files/archive
+ERROR_DIR=files/error
