--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Wrapper settings (secs)
-UPLOAD_INTERVAL=45
+UPLOAD_INTERVAL=300
 
 #Logging settings
 WRAPPER_LOG_FILE=wrapper.log
@@ -7,6 +7,7 @@ WRAPPER_LOG_FILE=wrapper.log
 WRAPPER_LOG_MAX_BYTES=5242880
 # Keep 10 backups
 WRAPPER_LOG_BACKUP_COUNT=10
+LOGGING_LEVEL=INFO # Added: General logging level (DEBUG, INFO, WARNING, ERROR, CRITICAL)
 
 # Grist settings
 GRIST_API_KEY=7a377f3f2d53207dc917c86030503e7cd3311686
